--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tailwindcss build -i ./styles.css -o ./tailwind/output.css --watch"
   },
   "keywords": [],
   "author": "",
